<resources>
    <string name="app_name">MyProject</string>
    <string name="et_email">이메일 주소를 입력해주세요</string>
    <string name="et_pw">비밀번호를 입력해 주세요</string>
    <string name="tv_searchpw">비밀번호를 잊어버리셨나요?</string>
    <string name="btn_register">로그인</string>
    <string name="tv_email">이메일 주소</string>
    <string name="tv_pw">비밀번호</string>
    <string name="toolbar_login">로그인</string>
    <string name="my_translation">My Translation</string>
    <string name="mytrans">나의 번역기</string>
    <string name="main_center_text">감사합니다 Thank you ありがとうございます\n\n谢谢 Gracias Cảm ơn ขอบคุณค่ะ Дзякуй\n\n ধন্যবাদ آپ کا شکریہ Cảm ơn Danke schön</string>
    <string name="e_mall_login">E-MALL로 로그인</string>
    <string name="google_login">Google 로그인</string>
    <string name="default_web_client_id1">438461504569-67dc646li05mfbp9pu2g6do090hqd121.apps.googleusercontent.com</string>
    <string name="vertical_bar">|</string>
    <string name="회원가입">회원가입</string>
    <string name="계정찾기">계정찾기</string>
    <string name="번역">번역</string>
    <string name="passwordCheck">비밀번호를 다시 입력 해 주세요</string>
    <string name="register">회원가입</string>
    <string name="tx_passwordCheck">비밀번호 확인</string>
    <string name="hint_name">이름을 입력해 주세요</string>
    <string name="ed_password">숫자,영문,특수문자 6자리 이상 입력해 주세요</string>
    <string name="tx_name">이름</string>

</resources>