<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>
        <variable
            name="user"
            type="com.rhtth.myproject.Account" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login.LoginActivity">

        <!--Tool bar Text지정-->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:background="#FFFFFF"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:fontFamily="@font/binggraesamanco"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_login"
                android:textColor="@color/black"
                android:textSize="30sp"
                />

        </androidx.appcompat.widget.Toolbar>



        <!--이메일 주소 Text-->
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/tv_email"
        android:textSize="20sp"
        android:fontFamily="@font/binggraesamanco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

        <!--이메일 주소 입력TEXT-->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="100dp"
            android:autofillHints="emailAddress"
            android:ems="15"
            android:fontFamily="@font/binggraesamanco"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#686767"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <!--비밀번호 Text-->
    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="150dp"
        android:text="@string/tv_pw"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/binggraesamanco"
        app:layout_constraintBottom_toTopOf="@+id/et_pw"
        app:layout_constraintEnd_toStartOf="@+id/et_pw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

        <!--비밀번호 입력TEXT-->
        <EditText
            android:id="@+id/et_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="190dp"
            android:autofillHints="password"
            android:ems="15"
            android:fontFamily="@font/binggraesamanco"
            android:hint="@string/et_pw"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <!--Login Button-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="300dp"
            android:backgroundTint="@color/login_button_color"
            android:text="@string/btn_register"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.387"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_pw"
            app:layout_constraintVertical_bias="0.213"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <!--비밀번호 찾기 Text-->
        <TextView
            android:id="@+id/login_find_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_searchpw"
            android:textColor="#1976D2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.055" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>